Bug 720385 - Make option.index follows the specifications. r=Ms2ger