content/html/content/src/nsHTMLSelectElement.h
@@ -143,7 +143,9 @@ public:
   void DropReference();
 
   /**
-   * Finds the index of a given option element
+   * Finds the index of a given option element.
+   * If the option isn't part of the collection, return NS_ERROR_FAILURE
+   * without setting aIndex.
    *
    * @param aOption the option to get the index of
    * @param aStartIndex the index to start looking at
